[B]Version 1.0.2[/B]
- Updated to danishaddons module 1.1.0

[B]Version 1.0.1[/B]
- Fixed cache path

[B]Version 1.0.0[/B]
- Initial version