@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<project version="4">
+  <component name="ProjectModuleManager">
+    <modules>
+      <module fileurl="file://$PROJECT_DIR$/.idea/plugin.video.pixel.tv.iml" filepath="$PROJECT_DIR$/.idea/plugin.video.pixel.tv.iml" />
+      <module fileurl="file://$PROJECT_DIR$/../xbmcstubs/.idea/xbmcstubs.iml" filepath="$PROJECT_DIR$/../xbmcstubs/.idea/xbmcstubs.iml" />
+    </modules>
+  </component>
+</project>
+
