@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon
-	id="plugin.video.pixel.tv"
-	version="1.0.2"
-	name="Pixel.tv"
-	provider-name="twinther [tommy@winther.nu]">
+<addon id="plugin.video.pixel.tv" version="1.0.3" name="Pixel.tv" provider-name="twinther [tommy@winther.nu]">
 	<requires>
 		<import addon="xbmc.python" version="1.0"/>
 		<import addon="script.module.danishaddons" version="1.1.0"/>
